# rib_segmentation

./: CMakeLists.txt  se_ribs.cxx
